--- a/src/app/components/menus/navigation-menu/navigation-menu.component.scss
+++ b/src/app/components/menus/navigation-menu/navigation-menu.component.scss
@@ -2,10 +2,9 @@
 @import '../../../styles/dimensions';
 
 .navigation-menu-container {
-  pointer-events: auto;
   background-color: $color-gray-25 !important;
-  height: 100%;
   text-align: center;
+  min-height: 100%;
 
   .navigation-menu-links-container {
     margin-top: 20px;
