--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -6,7 +6,7 @@
   height: 54px;
   border-radius: 0;
   color: $color-gray-200;
-  background-color: #f7f7f9;
+  background-color: $color-gray-25;
 
   .app-navbar-inner-container {
     display: flex;
