--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -1,8 +1,23 @@
 @import './dimensions';
+@import './colors';
 
 .ui.grid {
   margin: 0;
 }
+
+.ui.pink {
+  color: $color-primary-cerise !important;
+}
+
+.ui.pink.header {
+  color: $color-primary-cerise !important;
+}
+
+.ui.pink.label, .ui.pink.labels .label {
+  background-color: $color-primary-cerise !important;
+  border-color: $color-primary-cerise !important;
+}
+
 // Modify lef and right sidebar dimensions
 .ui.left.sidebar,
 .ui.right.sidebar {
