--- a/src/app/components/cards/job-card/job-card.component.scss
+++ b/src/app/components/cards/job-card/job-card.component.scss
@@ -17,6 +17,7 @@
 
       .job-header {
         @include truncate-owerflowing-text-multiline($font-size: $fs-l, $line-height: 1.1, $lines-to-show: 3, $excerpt-bg: $white);
+        color: $color-gray-500;
       }
     }
 
