Add cv to missing traits

--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -166,6 +166,13 @@
     *ngIf="!informationProvided && missingUserTraitsKeys && missingUserTraitsKeys[currentMissingUserTraitIndex] === 'job_experience'">
   </job-experience-input>
 
+  <resume-input
+    [centered]="true"
+    [showLabel]="false"
+    [hint]="missingUserTraits?.cv?.hint"
+    *ngIf="!informationProvided && missingUserTraitsKeys && missingUserTraitsKeys[currentMissingUserTraitIndex] === 'cv'">
+  </resume-input>
+
   <form-submit-button
     [buttonText]="'user.missing.traits.form.submit.button' | translate"
     [showButton]="!isInModal"
