--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -73,23 +73,10 @@
     {{'user.settings.form.bank.details.header' | translate}}
   </h3>
 
-  <clearing-number-input
+  <bank-account-input
     [apiErrors]="apiErrors"
-    [control]="settingsForm.controls['account_clearing_number']">
-  </clearing-number-input>
-
-  <account-number-input
-    [apiErrors]="apiErrors"
-    [control]="settingsForm.controls['account_number']">
-  </account-number-input>
-
-  <!-- The API can return errors for account, which isn't bound to any instance of form control -->
-  <div style="text-align: center">
-    <api-errors
-      attribute="account"
-      [errors]="apiErrors">
-    </api-errors>
-  </div>
+    [control]="settingsForm.controls['bank_account']">
+  </bank-account-input>
 
   <h3 class="ui horizontal divider pink header">
     <i class="settings icon"></i>
