--- a/src/app/components/pages/guide/guide-page.component.html
+++ b/src/app/components/pages/guide/guide-page.component.html
@@ -1,16 +1,16 @@
 <div class="ui centered grid guide-wrapper">
 
   <div class="row">
-    <img src="../../../../assets/images/guide-book.png" />
+    <img class="guide-header-img" src="../../../../assets/images/guide-book.png" />
   </div>
 
   <div class="row">
     <h2>Din Guide</h2>
   </div>
 
-  <div class="row stackable">
+  <div *ngFor="let item of items" class="row stackable">
     <div class="six wide column guide-image-wrapper">
-      <img class="guide-image" src="../../../../assets/images/guide-book.png" />
+      <img class="guide-image" src="http://sipxcom.org/wp-content/uploads/2017/03/programming_blog-400x400.jpg" />
     </div>
 
     <div class="ten wide column">
@@ -24,20 +24,43 @@
           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
         </p>
       </div>
-      <div class="row guide-bottom-wrapper">
-        <div class="column left floated">
-          <a href="#" class="btn-primary btn-small btn">
-            Läs mer
-          </a>
+      <div class="ui grid row equal width guide-bottom-wrapper">
+        <div class="column">
+          <base-button
+            (click)="lol()"
+            [buttonText]="'Läs mer'"
+            kind="primary"
+            size="small">
+          </base-button>
         </div>
-        <div class="column right floated">
+        <div class="column">
           <p class="guide-date-text">23 April 2017</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="guide-post-serepator">
+  <!--<div class="guide-post-serepator">
+  </div>-->
+
+  <div class="row guide-paginator">
+
+    <div class="guide-paginator-button">
+      <p>1</p>
+    </div>
+
+    <div class="guide-paginator-button guide-paginator-button-active">
+      <p>2</p>
+    </div>
+
+    <div class="guide-paginator-button">
+      <p>3</p>
+    </div>
+
+    <div class="guide-paginator-button">
+      <p>4</p>
+    </div>
+
   </div>
 
 </div>
