--- a/src/app/components/pages/guide/guide-page.component.scss
+++ b/src/app/components/pages/guide/guide-page.component.scss
@@ -73,6 +73,7 @@
     border-radius: 20px;
     margin-left: 8px;
     margin-right: 8px;
+    margin-bottom: 8px;
     border: 1px solid $color-gray-100;
     cursor: pointer;
 
