--- a/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
+++ b/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="row">
-    <h2>Din Guide</h2>
+    <h2>{{ 'guide-details.header' | translate }}</h2>
   </div>
 
   <div class="row guide-detail-top-image-wrapper">
@@ -41,7 +41,7 @@
   </div>
 
   <div class="row">
-    <h3 class="guide-detail-related-links-header">Relaterade länkar</h3>
+    <h3 class="guide-detail-related-links-header">{{ 'guide-details.related-links.header' | translate }}</h3>
   </div>
 
   <div *ngFor="let item of items" class="row">
