--- a/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
+++ b/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
@@ -44,23 +44,24 @@
     <h3 class="guide-detail-related-links-header">{{ 'guide-details.related-links.header' | translate }}</h3>
   </div>
 
-  <div *ngFor="let item of items" class="row">
-    <div style="text-align:center;" class="six wide column">
-      <img style="height:100px; width: 100px;" src="http://sipxcom.org/wp-content/uploads/2017/03/programming_blog-400x400.jpg" />
-    </div>
-
-    <div class="ten wide column">
-      <div class="row">
-        <h4 class="guide-detail-related-links-link">Hur man kan söka en lägenhet i Svergie</h4>
+  <div class="ui grid guide-detail-related-links-wrapper">
+    <div *ngFor="let item of items" class="row">
+      <div class="four wide computer only column guide-detail-related-links-img-wrapper">
+        <img class="guide-detail-related-links-img" src="http://sipxcom.org/wp-content/uploads/2017/03/programming_blog-400x400.jpg" />
       </div>
-      <div class="row">
-        <p class="guide-detail-related-links-link-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-        </p>
+
+      <div class="twelve wide computer sixteen wide mobile column">
+        <div class="row">
+          <h4 class="guide-detail-related-links-link">Hur man kan söka en lägenhet i Svergie</h4>
+        </div>
+        <div class="row">
+          <p class="guide-detail-related-links-link-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          </p>
+        </div>
       </div>
     </div>
   </div>
-
 
 
 
