--- a/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
+++ b/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
@@ -13,31 +13,19 @@
   </div>
 
   <div class="row">
-    <h2 class="guide-detail-header">Hur man kan söka en lägenhet i Svergie</h2>
+    <h2 class="guide-detail-header">{{guideDetailPost.header}}</h2>
   </div>
 
   <div class="row guide-detail-text">
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-      when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-      It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged.
-    </p>
-    <p>
-      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
-    <p>
-      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      {{guideDetailPost.text}}
     </p>
   </div>
 
   <div class="row">
-    <p class="guide-detail-date-text">23 April 2017</p>
+    <p class="guide-detail-date-text">
+      {{guideDetailPost.date}}
+    </p>
   </div>
 
   <div class="row">
@@ -45,18 +33,18 @@
   </div>
 
   <div class="ui grid guide-detail-related-links-wrapper">
-    <div *ngFor="let item of items" class="row">
+    <div *ngFor="let link of guideDetailPost.links" class="row">
       <div class="four wide computer only column guide-detail-related-links-img-wrapper">
         <img class="guide-detail-related-links-img" src="http://sipxcom.org/wp-content/uploads/2017/03/programming_blog-400x400.jpg" />
       </div>
 
       <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
-          <h4 class="guide-detail-related-links-link">Hur man kan söka en lägenhet i Svergie</h4>
+          <h4 class="guide-detail-related-links-link">{{link.header}}</h4>
         </div>
         <div class="row">
-          <p class="guide-detail-related-links-link-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          <p class="guide-detail-related-links-link-text">
+            {{link.text}}
           </p>
         </div>
       </div>
