Implemented new header

--- a/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
+++ b/src/app/components/pages/guide-detail-page/guide-detail-page.component.html
@@ -1,13 +1,14 @@
+<div class="guide-details-header-wrapper">
+  <div>
+    <img class="guide-details-header-img" src="../../../../assets/images/guide-book.png" />
+  </div>
+
+  <div>
+    <h2>{{ 'guide.header' | translate }}</h2>
+  </div>
+</div>
+
 <div class="ui centered grid guide-detail-wrapper">
-
-  <div class="row">
-    <img class="guide-header-img" src="../../../../assets/images/guide-book.png" />
-  </div>
-
-  <div class="row">
-    <h2>{{ 'guide-details.header' | translate }}</h2>
-  </div>
-
   <div class="row guide-detail-top-image-wrapper">
     <img class="guide-detail-image" src="http://sipxcom.org/wp-content/uploads/2017/03/programming_blog-400x400.jpg" />
   </div>
