--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './app/styles/bootstrap-modifications';
+@import './app/styles/borders';
 @import './app/styles/colors';
 @import './app/styles/dimensions';
 @import './app/styles/semantic-ui-modifications';
