Remove console log statement and safeguard against job.company when null

--- a/src/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/src/app/components/my-jobs-item/my-jobs-item.component.html
@@ -15,7 +15,7 @@
         <span *ngIf="application.willPerform && application.jobEnded">{{'assignment.status.performed' | translate}}</span>
       </p>
 
-      <p *ngIf="section == 'history'">{{application.job.company.name}}</p>
+      <p *ngIf="section == 'history'">{{application?.job?.company?.name}}</p>
     </section>
   </div>
 </div>
